# lq

./: .gitignore  .mcp.json  AGENT.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml
docs/: ci-cd.md  design-bird-migration.md  design-commands.md  duck-hunt-v2-migration.md  duck-hunt-v3-migration.md  getting-started.md  index.md  integration.md  mcp.md  query-guide.md  requirements.txt
docs/commands/: capture.md  errors.md  exec.md  filter.md  index.md  init.md  maintenance.md  query.md  registry.md  run.md  sql.md  status.md
experiments/: agent-build-test.md
src/blq/: __init__.py  bird.py  bird_schema.sql  cli.py  query.py  schema.sql  serve.py
src/blq/commands/: README.md  __init__.py  core.py  events.py  execution.py  hooks_cmd.py  init_cmd.py  management.py  migrate.py  query_cmd.py  registry.py  serve_cmd.py  sync_cmd.py
src/lq/: __init__.py  cli.py  cli_old.py  query.py  schema.sql  serve.py
src/lq/commands/: __init__.py  core.py  events.py  execution.py  init_cmd.py  management.py  query_cmd.py  registry.py  serve_cmd.py  sync_cmd.py
tests/: __init__.py  conftest.py  test_bird.py  test_command_args.py  test_core.py  test_hooks.py  test_mcp_server.py  test_phase1_structured_output.py  test_phase2_command_registry.py  test_query_api.py  test_query_filter.py
tests/sql/: test_duck_hunt_v2_migration.sql
