[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lq"
version = "0.1.0"
description = "Log Query - capture and query build/test logs with DuckDB"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Teague Sterling", email = "teaguesterling@gmail.com" }
]
keywords = ["duckdb", "logs", "build", "test", "ci", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "duckdb>=1.1.0",
    "pandas>=2.0.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]
duck-hunt = [
    # Install duck_hunt extension for enhanced parsing
    # "duck-hunt"  # When published
]

[project.scripts]
lq = "lq.cli:main"

[project.urls]
Homepage = "https://github.com/teaguesterling/lq"
Repository = "https://github.com/teaguesterling/lq"
Issues = "https://github.com/teaguesterling/lq/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/lq"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
